[package]
name = "billable"
version = "0.1.0"
edition = "2021"
authors = ["Robert Wijas"]
description = "Displays monthly reports for billable hours. Supports Toggl and Harvest."
homepage = "http://github.com/robertwijas/billable-rust"
repository = "http://github.com/robertwijas/billable-rust"
readme = "README.md"
keywoards = ["cli", "toggl", "harvest"]
cateogies = ["command-line-utilities"]

[dependencies]
config = "0.13"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
directories = "4.0"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
