[package]
name = "billable"
version = "0.2.1"
edition = "2021"
authors = ["Robert Wijas"]
description = "Displays monthly reports for billable hours. Supports Toggl and Harvest."
homepage = "http://github.com/robertwijas/billable-rust"
repository = "http://github.com/robertwijas/billable-rust"
readme = "README.md"
keywords = ["cli", "toggl", "harvest"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[dependencies]
config = "0.13"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
directories = "4.0"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
console = "0.15.5"
dialoguer = "0.10.3"
